[Material][Mac] Removed "single color while editing text" behavior

BUG=615118

Review-Url: https://codereview.chromium.org/2017103002
Cr-Commit-Position: refs/heads/master@{#396545}

Former-commit-id: c5b06f297e018d28ec498c8c18041e80fefccf2a